# book-web-backend

./: .gitignore  Cargo.toml  README.md
config/: default.yaml
data/book/1/: [author_1]book_1.txt  book_info.json
data/book/3Frb0O7Mdc/: [1]1.txt  book_info.json
data/book/6mkhkJO0L_/: [12]12.txt  book_info.json
data/book/EEkYKUOFjI/: 8DS3S.txt  [author_2]book_2.txt  book_info.json
data/book/FFbKmixngz/: S7GgO.txt  book_info.json
data/book/Hn9Dc6kqN1/: J1JEh.txt  WZKT2.txt  [aespa]aespa.txt  book_info.json
data/book/JVmEU-bbmG/: [33]2.txt  book_info.json
data/book/ccL4XKBWqZ/: 63gBB.txt  [114514]10086.txt  book_info.json
sql/: date.sql
src/: main.rs
src/app/: mod.rs
src/component/: mod.rs
src/component/database/: book.rs
src/component/model/: book.rs
src/component/router/: book.rs  mod.rs
src/model/: author.rs  book.rs  chapter.rs  collect.rs  history.rs  mod.rs  recommend.rs  roll.rs  user.rs
src/route/: mod.rs
src/route/book/: book_create.rs  book_info.rs  book_info_all.rs  book_info_list_latest_update.rs  book_search.rs  book_verify.rs  chapter.rs  chapter_create.rs  chapter_info_list.rs  create_book.rs  create_chapter.rs  get_all_book.rs  get_all_chapter.rs  get_book_info.rs  get_chapter.rs  get_chapter_info.rs  get_chapter_list.rs  latest_update_books.rs  mod.rs  search_book.rs  verify_book.rs
src/route/user/: create_user.rs  delete_user.rs  get_all_user.rs  get_user_info.rs  logout.rs  mod.rs  refresh_access_token.rs  signin.rs  signup.rs  update_avatar_url.rs  update_email.rs  update_password.rs  user_info.rs  verify_access_token.rs  verify_email.rs
src/route/util/: captcha_email.rs  captcha_image.rs  mod.rs
src/router/: mod.rs
src/router/book/: book_create.rs  book_info.rs  mod.rs
src/router/user/: mod.rs
src/sql/: author.rs  book.rs  chapter.rs  mod.rs  roll.rs  user.rs
src/util/: app_error.rs  app_response.rs  auth.rs  captcha_email.rs  config.rs  database.rs  email.rs  error.rs  mod.rs  redis.rs
test/: upload_book.json
