[package]
name = "book-web-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "*", features = ["multipart"] }
axum-extra = "0.9.4"
config = "*"
nanoid = "0.4.0"
once_cell = "*"
serde = "*"
serde_json = "*"
sqlx = { version = "*", features = ["runtime-tokio", "postgres"] }
thiserror = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tower-http = { version = "*", features = ["trace"] }
tracing = "*"
tracing-subscriber = "*"
